--- a/deno.json
+++ b/deno.json
@@ -1,19 +1,21 @@
 {
   "lint": {
-    "files": {
-      "exclude": [
-        "README.md"
-      ]
-    }
+    "exclude": [
+      "README.md"
+    ]
   },
   "fmt": {
-    "files": {
-      "exclude": [
-        "README.md"
-      ]
-    }
+    "exclude": [
+      "README.md"
+    ]
   },
-  "importMap": "import_map.json",
+  "imports": {
+    "std/": "https://deno.land/std@0.186.0/",
+    "deno_slack_api/": "https://deno.land/x/deno_slack_api@2.1.0/",
+    "checksum/": "https://deno.land/x/checksum@1.4.0/",
+    "velo/": "https://deno.land/x/velo@1.0.0/",
+    "express": "npm:express@4.18.2"
+  },
   "tasks": {
     "start": "deno run --allow-read --allow-write --allow-net --allow-env ./main.ts"
   }
